# mushrooms

./: .gitignore  README.md  prefect.yaml  pyproject.toml
.github/workflows/: deploy_action.yml  test_action.yml
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/macros/: generate_schema_name.sql  get_categorical_columns.sql
dbt_project/models/consumption/: mushrooms_encoded_for_xgb.sql  predictions_post.sql  predictions_pre.sql
dbt_project/models/raw/: mushroom_data.sql  mushroom_data_post.sql  mushroom_data_pre.sql  mushrooms_raw.sql  schema.yml
dbt_project/seeds/: mushroom_data.csv  schema.yml
model_training/: pg_auth.py  train_xgboost.ipynb
prefect/: flow.py  inference.py  models.yml
setup_scripts/: deploy_script.sh
terraform/: main.tf
website/: app.py
